Update app icon and rebuild app

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/hex192.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/hex128.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#212121" />
         <meta name="description" content="Chrome extension to randomly generate a colour palette which lets you copy colour code hex values quickly" />
